# silverhand_hand_control

./: CMakeLists.txt  README.md  package.xml  silverhand_hand_control.xml
config/: controllers.yaml  hardware_profiles.yaml  initial_positions.yaml
include/silverhand_hand_control/: joint_ports.hpp  silverhand_hand_hardware.hpp  visibility_control.h
launch/: silverhand_hand_bringup.launch.py  silverhand_hand_mock.launch.py  silverhand_hand_ros_control.launch.py
ros2_control/: silverhand_hand.ros2_control.xacro
scripts/: start_hand_mock.sh  start_hand_real.sh
src/: silverhand_hand_hardware.cpp
systemd/system/: silverhand-hand-control@.service
systemd/user/: silverhand-hand-control@.service
urdf/: silverhand_hand.urdf.xacro
